<resources>
    <string name="app_name">Higher Lower</string>
    <string name="button_choose_sn">Choose secret number</string>
    <string name="textview_chosen_sn">Secret number chosen!</string>
    <string name="button_check">Check</string>
    <string name="textview_hilo">No secret number guessed</string>
    <string name="textview_hilo_greater">The secret number is greater</string>
    <string name="textview_hilo_lower">The secret number is lower</string>
    <string name="textview_hilo_equals">Well done!</string>
    <string name="edittext_guess_sn">Guess the number</string>
    <string name="toast_incorrect_number">Incorrect Number!</string>
    <string name="toast_choose_number">Choose secret number</string>
    <string name="textview_max_number">Secret number is from 1 to</string>
    <string name="edittext_max_number">Enter a number</string>
    <string name="textview_turns_number">Turns</string>
    <string name="edittext_turns_number">Enter a number</string>
    <string name="button_play">Play</string>
    <string name="textview_remaining_turns">Remaining turns: %1$d</string>
    <string name="textview_lost">"You've lost! The secret number was %1$d"</string>
    <string name="button_save">Save values as favorites</string>
    <string name="secret_number_fragment_label">Play</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="help_text">Choose the maximum and turns number, randomize a secret number and try to guess it!</string>
    <string name="help_fragment_label">Help</string>
    <string name="go_to_help_text">Help</string>
    <string name="go_to_secret_number_100_text">Quick game</string>
</resources>