<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/button_choose_sn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/button_choose_sn" />

    <TextView
        android:id="@+id/textview_chosen_sn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/textview_chosen_sn"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/edittext_guess_sn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/edittext_guess_sn"
        android:importantForAutofill="no"
        android:inputType="number" />

    <Button
        android:id="@+id/button_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/button_check" />

    <TextView
        android:id="@+id/textview_hilo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/textview_hilo"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textview_remain_turns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textview_lost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:visibility="invisible" />

</LinearLayout>