<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/settingsFragment">

    <fragment
        android:id="@+id/secretNumberFragment"
        android:name="fr.mastersid.martinez.higherlower.SecretNumberFragment"
        android:label="@string/secret_number_fragment_label"
        tools:layout="@layout/fragment_secret_number">
        <argument
            android:name="max"
            app:argType="integer"/>
        <argument
            android:name="turns"
            app:argType="integer"/>
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="fr.mastersid.martinez.higherlower.SettingsFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_secret_number">
        <action
            android:id="@+id/action_settingsFragment_to_secretNumberFragment"
            app:destination="@id/secretNumberFragment" />
    </fragment>
    <fragment
        android:id="@+id/helpFragment"
        android:name="fr.mastersid.martinez.higherlower.HelpFragment"
        android:label="@string/help_fragment_label"
        tools:layout="@layout/fragment_help"/><action android:id="@+id/action_global_secretNumberFragment" app:destination="@id/secretNumberFragment"/>
</navigation>